ja nevedel ze to je do 9:00

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,9 @@
             <h6><span class="heading__brighter">h6</span> Heading</h6>
         </section>
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, voluptates odio. Corporis inventore
+            <p>Lorem ipsum dolor sit amet consectetur <a href="https://course.elementsofai.com/cs/1">adipisicing</a>
+                elit. Aliquid, voluptates odio.
+                Corporis <mark>inventore</mark>
                 fugiat
                 similique, sit ad quis.
                 Nulla quibusdam sunt corporis harum impedit eius? Autem placeat eligendi fugiat eaque.</p>
@@ -35,18 +37,20 @@
 
         <section>
             <h2>Quotes</h2>
+            <q>Jasně že bych sežral cizího psa</q>
             <blockquote>
                 <p>Do not compare yourself to others. If you do so, you are insulting yourself.</p>
                 <span class="author">Gándhí</span>
             </blockquote>
         </section>
-
+        <!--
         <section>
             <h2>Code</h2>
-            <span class="code--angle">section</span>
+            <div class="div--code">
 
+            </div>
         </section>
-
+-->
 
         <section>
             <h2>Lists</h2>
@@ -54,13 +58,13 @@
             <ul>
                 <li>item</li>
                 <li>item</li>
-                <li>
-                    <ul>
-                        <li> item</li>
-                        <li>item</li>
-                    </ul>
 
-                </li>
+                <ul>
+                    <li> item</li>
+                    <li>item</li>
+                </ul>
+
+
                 <li>item</li>
 
             </ul>
@@ -68,13 +72,13 @@
             <ol>
                 <li>item</li>
                 <li>item</li>
-                <li>
-                    <ul>
-                        <li> item</li>
-                        <li>item</li>
-                    </ul>
 
-                </li>
+                <ol>
+                    <li> item</li>
+                    <li>item</li>
+                </ol>
+
+
                 <li>item</li>
 
             </ol>
@@ -84,10 +88,16 @@
 
         <section>
             <h2>Images</h2>
-            <figure>
-                <img src="./images/tmio.jpg">
-                <figcaption><span class="figcaption--cislo"></span>Fotka s budoucím premiérem</figcaption>
-            </figure>
+            <div class="img--flex">
+                <figure>
+                    <img src="./images/tmio.jpg">
+                    <figcaption><span class="figcaption--cislo"></span>Fotka s budoucím premiérem</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/tmio.jpg">
+                    <figcaption><span class="figcaption--cislo"></span>nevim nestiham</figcaption>
+                </figure>
+            </div>
         </section>
 
     </main>
